fixed image, fix the off center divs

--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@
 }
 
 .image {
-  position: absolute;
+  position: relative;
   height: 100px;
   width: 100px;
 }
